--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,5 +8,9 @@
         android:id="@+id/home_fragment"
         android:name="com.example.surfit.ui.home.HomeFragment"
         android:label="@string/home_title" />
+    <fragment
+        android:id="@+id/add_new_car_fragment"
+        android:name="com.example.surfit.ui.addNewCar.AddNewCarFragment"
+        android:label="AddNewCarFragment" />
 
 </navigation>
