--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <item name="home_fragment" type="id" />
+    <item name="add_new_car_fragment" type="id" />
 </resources>
