Squashed commit of the following:
commit 49283f77b971392bf540bd1284b17efcf60e00d6
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Thu Mar 16 00:31:19 2023 +0700

    Finish full info screen

commit 29d5b07a5bc8bd9a5d250fd6778fe48dc46174d2
Author: Fadin Vladislav <sad_456@ngs.ru>
Date:   Thu Mar 16 00:18:43 2023 +0700

    Add theming and full info screen

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -12,5 +12,9 @@
         android:id="@+id/add_new_car_fragment"
         android:name="com.example.surfit.ui.addNewCar.AddNewCarFragment"
         android:label="AddNewCarFragment" />
+    <fragment
+        android:id="@+id/full_car_info_fragment"
+        android:name="com.example.surfit.ui.fullCarInfo.FullCarInfoFragment"
+        android:label="FullCarInfoFragment" />
 
 </navigation>
