--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,5 +16,9 @@
         android:id="@+id/full_car_info_fragment"
         android:name="com.example.surfit.ui.fullCarInfo.FullCarInfoFragment"
         android:label="FullCarInfoFragment" />
+    <fragment
+        android:id="@+id/settings_fragment"
+        android:name="com.example.surfit.ui.settings.SettingsFragment"
+        android:label="SettingsFragment" />
 
 </navigation>
