--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item name="home_fragment" type="id" />
     <item name="add_new_car_fragment" type="id" />
     <item name="full_car_info_fragment" type="id" />
+    <item name="settings_fragment" type="id" />
 </resources>
