--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SurfIT" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-         <item name="colorPrimary">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:windowTranslucentStatus">true</item>
     </style>
 
     <style name="Theme.SurfIT" parent="Base.Theme.SurfIT" />
